# cstr8

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  publish.yaml
src/: buf.rs  lib.rs  macros.rs  slice.rs  tests.rs
